--- a/style.css
+++ b/style.css
@@ -7,5 +7,41 @@
 }
 
 body {
+  height: 100vh;
+  width: 100%;
   font-family: "Space Grotesk", sans-serif;
+  background-image: url(images/bg-main-mobile.png);
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.container {
+  width: 375px;
+  height: 600px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 20px;
+}
+
+.cards {
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+
+.card-design {
+  width: 290px;
+}
+
+.back-card {
+  position: absolute;
+  top: -90px;
+  right: -5px;
+  z-index: -1;
+}
+
+.front-card {
+  margin-left: -60px;
 }
