--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   height: 100vh;
   width: 100%;
   font-family: "Space Grotesk", sans-serif;
+  font-weight: 500;
   background-image: url(images/bg-main-mobile.png);
   background-position: top;
   background-repeat: no-repeat;
@@ -18,10 +19,11 @@ body {
 
 .container {
   width: 375px;
-  height: 600px;
+  height: 800px;
   display: flex;
   justify-content: center;
   flex-direction: column;
+  gap: 50px;
   padding: 20px;
 }
 
@@ -44,4 +46,126 @@ body {
 
 .front-card {
   margin-left: -60px;
+}
+
+.front-side {
+  position: relative;
+}
+
+.front-details {
+  position: absolute;
+  left: -40px;
+  top: 20px;
+}
+
+.card-logo {
+  width: 60px;
+}
+
+.card-display-number {
+  color: hsl(0, 0%, 100%);
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 2px;
+  width: 290px;
+  margin-top: 30px;
+}
+
+.name-date {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 10px;
+  width: 250px;
+}
+
+.display-name,
+.display-date {
+  font-size: 10px;
+  color: hsl(0, 0%, 100%);
+  font-weight: 500;
+}
+
+.back-details {
+  position: absolute;
+  top: -20px;
+  right: 30px;
+}
+
+.cvc-back {
+  color: hsl(0, 0%, 100%);
+  font-size: 12px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.form-name,
+.card-number,
+.cvc-code,
+.card-dates {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.card-details {
+  display: flex;
+}
+
+.exp-date {
+  display: flex;
+  gap: 10px;
+}
+
+.exp-date input {
+  width: 83px;
+}
+
+.cvc-code {
+  margin-left: 10px;
+}
+
+.cvc-code input {
+  width: 150px;
+}
+
+input {
+  padding: 10px;
+  border: 2px solid hsl(270, 3%, 87%);
+  border-radius: 6px;
+  font-size: 16px;
+}
+
+input::placeholder {
+  color: hsl(270, 3%, 87%);
+}
+
+input:focus {
+  outline: none;
+  border: 2px solid hsl(279, 6%, 55%);
+  border-radius: 6px;
+}
+
+.confirm-button {
+  border: none;
+  height: 50px;
+  border-radius: 6px;
+  background: hsl(278, 68%, 11%);
+  color: hsl(0, 0%, 100%);
+  font-size: 18px;
+  letter-spacing: 1px;
+}
+
+p {
+  color: hsl(278, 68%, 11%);
+  letter-spacing: 2px;
+  font-size: 15px;
+}
+
+.input-error {
+  border: 2px solid hsl(0, 100%, 66%);
 }
