--- a/style.css
+++ b/style.css
@@ -86,6 +86,10 @@ body {
   font-weight: 500;
 }
 
+.display-name {
+  text-transform: uppercase;
+}
+
 .back-details {
   position: absolute;
   top: -20px;
@@ -101,6 +105,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  margin-top: -20px;
 }
 
 .form-name,
@@ -158,6 +163,7 @@ input:focus {
   color: hsl(0, 0%, 100%);
   font-size: 18px;
   letter-spacing: 1px;
+  cursor: pointer;
 }
 
 p {
@@ -168,4 +174,11 @@ p {
 
 .input-error {
   border: 2px solid hsl(0, 100%, 66%);
+}
+
+.error-info {
+  font-size: 14px;
+  color: hsl(0, 100%, 66%);
+  margin-bottom: -10px;
+  visibility: hidden;
 }
