--- a/style.css
+++ b/style.css
@@ -222,3 +222,60 @@ p {
   margin-top: 20px;
   cursor: pointer;
 }
+
+@media screen and (min-width: 1440px) {
+  body {
+    background-image: url(images/bg-main-desktop.png);
+    background-position: left;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .container {
+    width: 1200px;
+    height: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 120px;
+  }
+  .card-design {
+    width: 380px;
+  }
+  .cards {
+    width: 300px;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .front-side {
+    position: absolute;
+    top: -100px;
+    left: -100px;
+  }
+  .back-card {
+    top: -20px;
+  }
+  .back-side {
+    position: relative;
+  }
+  .back-details {
+    position: absolute;
+    right: 40px;
+    top: 75px;
+  }
+  .card-display-number {
+    margin-top: 50px;
+    font-size: 24px;
+    width: 310px;
+  }
+  .card-logo {
+    width: 80px;
+  }
+  .name-date {
+    margin-top: 15px;
+    width: 330px;
+  }
+}
